src/styles.scss
@import "~normalize.css/normalize.css";
@import "assets/scss/_variables.scss";
@import "assets/scss/_colors.scss";
@import "assets/scss/_flex.scss";
@import "assets/scss/_navigation.scss";
@import "assets/scss/_typography.scss";
@import "assets/scss/_cards.scss";
@import "assets/scss/_tables.scss";
@import "assets/scss/_forms.scss";
@import "assets/scss/_entity-index.scss";
@import "assets/scss/_entity-view.scss";
@import "assets/scss/_mixins.scss";
@import "assets/scss/_tab.scss";
@import "assets/scss/_menu.scss";
@import "assets/scss/_dashboard.scss";
@import "assets/scss/_search.scss";
@import "assets/scss/_datepicker-custom.scss";
@import "assets/scss/_notifications";
@import "assets/scss/_customer-view.scss";
@import "assets/scss/_transaction-view.scss";
@import "assets/scss/_profile.scss";
@import "assets/scss/_advanced-filter.scss";
@import "assets/scss/_reports-table.scss";
@import "assets/scss/_tracker-view.scss";
@import "assets/scss/_dialogs.scss";
@import "assets/scss/_buttons.scss";
@import "assets/scss/_registration.scss";
@import "assets/scss/_login.scss";
@import "assets/scss/_charts.scss";
@import "assets/scss/_mat-rewrites.scss";

/***************
  HTML Styles
***************/

body {
  @include font-body();

  margin: 0 !important;

  -webkit-font-smoothing: antialiased;

  ::-webkit-scrollbar {
    width: 0.4em;
    height: 0.4em;
  }

  ::-webkit-scrollbar-track {
    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
  }

  ::-webkit-scrollbar-thumb {
    background-color: #4A90E2;
    outline: 1px solid #4A90E2;
  }
}

p.box {
  padding: 20px;
}
p {
  color: rgba(0, 0, 0, 0.71);
  padding: 0;
  -webkit-font-smoothing: antialiased;
}

h1,h2,h3,h4,h5,h6 {
  -webkit-font-smoothing: antialiased;
}

h5 > span {
  font-size: 14px;
  margin-left: 15px;
  color: #777;
}

